<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/details_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_poster"
                android:maxWidth="150dp"
                android:padding="5dp"
                android:src="@drawable/stub" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/details_extra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_cast"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/details_certificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stub_certificate"
            android:textColor="#C09853" />

        <TextView
            android:id="@+id/details_section_review"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ratings"
            android:drawablePadding="5dp"
            android:text="@string/content_title_rating" />

        <TableLayout
            android:id="@+id/details_ratings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_rating_press"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/details_pressrating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/stub_rating"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <RatingBar
                    android:id="@+id/details_pressrating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_rating_press"
                    android:isIndicator="true"
                    android:max="5"
                    android:rating="3.1"
                    android:stepSize="0.1" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_rating_user"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/details_userrating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/stub_rating"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <RatingBar
                    android:id="@+id/details_userrating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_rating_user"
                    android:isIndicator="true"
                    android:max="10"
                    android:rating="3.1"
                    android:stepSize=".1" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/details_section_display"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_display"
            android:drawablePadding="5dp"
            android:text="@string/content_title_display" />

        <TextView
            android:id="@+id/details_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/stub_display"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/details_section_synopsis"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_synopsis"
            android:drawablePadding="5dp"
            android:text="@string/content_title_synopsis" />

        <TextView
            android:id="@+id/details_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/stub_synopsis"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>